# API_autotest

./: .gitignore  README.md  pyproject.toml
apis/: conftest.py
apis/catfacts/json_schemas/: get_all_breeds.json  get_list_of_facts.json  get_random_fact.json
apis/catfacts/tests/: test_different_requests.py  test_get_breeds.py  test_get_list_of_facts.py  test_get_random_fact.py
apis/catfacts/utils/: read_json.py  setup_tests.py
apis/demoshop/: .env.example
apis/demoshop/model/: demoqa.py
apis/demoshop/tests/: conftest.py  test_add_to_cart.py  test_authorization.py
apis/demoshop/utils/: get_auth.py
apis/reqres/json_schemas/: patch_users.json  post_users.json  put_users.json  register_user.json
apis/reqres/tests/: test_create_user.py  test_delete_user.py  test_get_users.py  test_patch_user.py  test_register_user.py  test_simple.py  test_update_user.py
