[tool.poetry]
name = "api-autotest"
version = "0.1.0"
description = ""
authors = ["MikhailIzegov <mikhail.izegov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0rc8"
pytest = "^8.1.1"
allure-pytest = "^2.13.2"
requests = "^2.31.0"
curlify = "^2.2.1"
jsonschema = "^4.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
